lexical_specs1/y.output
Grammar

    0 $accept: program $end

    1 program: chunks exps

    2 chunks: chunk chunks
    3       | /* empty */

    4 chunk: tydec
    5      | vardec

    6 vardec: "var" ID ":=" rvalue
    7       | "var" ID ":" ty
    8       | "var" ID ":" ty ":=" rvalue

    9 tydec: "type" ID "=" ty

   10 ty: type_id
   11   | "array of" type_id "[" NUMCONST "]"
   12   | ID

   13 type_id: "int"
   14        | "str"
   15        | "bool"
   16        | "float"

   17 exps: exp
   18     | exp ";" exps
   19     | /* empty */

   20 exp: lvalue ":=" rvalue
   21    | "(" exps ")"
   22    | "if" rvalue "then" exp
   23    | "if" rvalue "then" exp "else" exp
   24    | "while" rvalue "do" exp
   25    | "break"

   26 rvalue: binops
   27       | texp
   28       | "-" binops

   29 binops: fexp "=" binops
   30       | fexp "<>" binops
   31       | fexp ">" binops
   32       | fexp "<" binops
   33       | fexp "+" binops
   34       | fexp "-" binops
   35       | fexp

   36 fexp: texp "*" fexp
   37     | texp "/" fexp
   38     | texp "*" texp
   39     | texp "/" texp

   40 texp: "(" rvalue ")"
   41     | lvalue
   42     | consts

   43 lvalue: ID "[" rvalue "]"
   44       | ID

   45 consts: "nil"
   46       | NUMCONST
   47       | STRCONST
   48       | FLOATCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
"nil" (258) 45
ID (259) 6 7 8 9 12 43 44
NUMCONST (260) 11 46
STRCONST (261) 47
FLOATCONST (262) 48
";" (263) 18
":" (264) 7 8
"(" (265) 21 40
")" (266) 21 40
"[" (267) 11 43
"]" (268) 11 43
"+" (269) 33
"-" (270) 28 34
"*" (271) 36 38
"/" (272) 37 39
"=" (273) 9 29
"<>" (274) 30
">" (275) 31
"<" (276) 32
":=" (277) 6 8 20
"var" (278) 6 7 8
"type" (279) 9
"array of" (280) 11
"int" (281) 13
"float" (282) 16
"str" (283) 14
"bool" (284) 15
"while" (285) 24
"do" (286) 24
"if" (287) 22 23
"then" (288) 22 23
"else" (289) 23
"break" (290) 25


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
chunks (38)
    on left: 2 3, on right: 1 2
chunk (39)
    on left: 4 5, on right: 2
vardec (40)
    on left: 6 7 8, on right: 5
tydec (41)
    on left: 9, on right: 4
ty (42)
    on left: 10 11 12, on right: 7 8 9
type_id (43)
    on left: 13 14 15 16, on right: 10 11
exps (44)
    on left: 17 18 19, on right: 1 18 21
exp (45)
    on left: 20 21 22 23 24 25, on right: 17 18 22 23 24
rvalue (46)
    on left: 26 27 28, on right: 6 8 20 22 23 24 40 43
binops (47)
    on left: 29 30 31 32 33 34 35, on right: 26 28 29 30 31 32 33 34
fexp (48)
    on left: 36 37 38 39, on right: 29 30 31 32 33 34 35 36 37
texp (49)
    on left: 40 41 42, on right: 27 36 37 38 39
lvalue (50)
    on left: 43 44, on right: 20 41
consts (51)
    on left: 45 46 47 48, on right: 42


state 0

    0 $accept: . program $end
    1 program: . chunks exps
    2 chunks: . chunk chunks
    3       | .  [$end, ID, "(", "while", "if", "break"]
    4 chunk: . tydec
    5      | . vardec
    6 vardec: . "var" ID ":=" rvalue
    7       | . "var" ID ":" ty
    8       | . "var" ID ":" ty ":=" rvalue
    9 tydec: . "type" ID "=" ty

    "var"   shift, and go to state 1
    "type"  shift, and go to state 2

    $default  reduce using rule 3 (chunks)

    program  go to state 3
    chunks   go to state 4
    chunk    go to state 5
    vardec   go to state 6
    tydec    go to state 7


state 1

    6 vardec: "var" . ID ":=" rvalue
    7       | "var" . ID ":" ty
    8       | "var" . ID ":" ty ":=" rvalue

    ID  shift, and go to state 8


state 2

    9 tydec: "type" . ID "=" ty

    ID  shift, and go to state 9


state 3

    0 $accept: program . $end

    $end  shift, and go to state 10


state 4

    1 program: chunks . exps
   17 exps: . exp
   18     | . exp ";" exps
   19     | .  [$end]
   20 exp: . lvalue ":=" rvalue
   21    | . "(" exps ")"
   22    | . "if" rvalue "then" exp
   23    | . "if" rvalue "then" exp "else" exp
   24    | . "while" rvalue "do" exp
   25    | . "break"
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID

    ID       shift, and go to state 11
    "("      shift, and go to state 12
    "while"  shift, and go to state 13
    "if"     shift, and go to state 14
    "break"  shift, and go to state 15

    $default  reduce using rule 19 (exps)

    exps    go to state 16
    exp     go to state 17
    lvalue  go to state 18


state 5

    2 chunks: . chunk chunks
    2       | chunk . chunks
    3       | .  [$end, ID, "(", "while", "if", "break"]
    4 chunk: . tydec
    5      | . vardec
    6 vardec: . "var" ID ":=" rvalue
    7       | . "var" ID ":" ty
    8       | . "var" ID ":" ty ":=" rvalue
    9 tydec: . "type" ID "=" ty

    "var"   shift, and go to state 1
    "type"  shift, and go to state 2

    $default  reduce using rule 3 (chunks)

    chunks  go to state 19
    chunk   go to state 5
    vardec  go to state 6
    tydec   go to state 7


state 6

    5 chunk: vardec .

    $default  reduce using rule 5 (chunk)


state 7

    4 chunk: tydec .

    $default  reduce using rule 4 (chunk)


state 8

    6 vardec: "var" ID . ":=" rvalue
    7       | "var" ID . ":" ty
    8       | "var" ID . ":" ty ":=" rvalue

    ":"   shift, and go to state 20
    ":="  shift, and go to state 21


state 9

    9 tydec: "type" ID . "=" ty

    "="  shift, and go to state 22


state 10

    0 $accept: program $end .

    $default  accept


state 11

   43 lvalue: ID . "[" rvalue "]"
   44       | ID .  [$end, ID, ";", "(", ")", "]", "+", "-", "*", "/", "=", "<>", ">", "<", ":=", "var", "type", "while", "do", "if", "then", "else", "break"]

    "["  shift, and go to state 23

    $default  reduce using rule 44 (lvalue)


state 12

   17 exps: . exp
   18     | . exp ";" exps
   19     | .  [")"]
   20 exp: . lvalue ":=" rvalue
   21    | . "(" exps ")"
   21    | "(" . exps ")"
   22    | . "if" rvalue "then" exp
   23    | . "if" rvalue "then" exp "else" exp
   24    | . "while" rvalue "do" exp
   25    | . "break"
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID

    ID       shift, and go to state 11
    "("      shift, and go to state 12
    "while"  shift, and go to state 13
    "if"     shift, and go to state 14
    "break"  shift, and go to state 15

    $default  reduce using rule 19 (exps)

    exps    go to state 24
    exp     go to state 17
    lvalue  go to state 18


state 13

   24 exp: "while" . rvalue "do" exp
   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 31
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 14

   22 exp: "if" . rvalue "then" exp
   23    | "if" . rvalue "then" exp "else" exp
   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 37
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 15

   25 exp: "break" .

    $default  reduce using rule 25 (exp)


state 16

    1 program: chunks exps .

    $default  reduce using rule 1 (program)


state 17

   17 exps: exp .  [$end, ")"]
   18     | exp . ";" exps

    ";"  shift, and go to state 38

    $default  reduce using rule 17 (exps)


state 18

   20 exp: lvalue . ":=" rvalue

    ":="  shift, and go to state 39


state 19

    2 chunks: chunk chunks .

    $default  reduce using rule 2 (chunks)


state 20

    7 vardec: "var" ID ":" . ty
    8       | "var" ID ":" . ty ":=" rvalue
   10 ty: . type_id
   11   | . "array of" type_id "[" NUMCONST "]"
   12   | . ID
   13 type_id: . "int"
   14        | . "str"
   15        | . "bool"
   16        | . "float"

    ID          shift, and go to state 40
    "array of"  shift, and go to state 41
    "int"       shift, and go to state 42
    "float"     shift, and go to state 43
    "str"       shift, and go to state 44
    "bool"      shift, and go to state 45

    ty       go to state 46
    type_id  go to state 47


state 21

    6 vardec: "var" ID ":=" . rvalue
   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 48
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 22

    9 tydec: "type" ID "=" . ty
   10 ty: . type_id
   11   | . "array of" type_id "[" NUMCONST "]"
   12   | . ID
   13 type_id: . "int"
   14        | . "str"
   15        | . "bool"
   16        | . "float"

    ID          shift, and go to state 40
    "array of"  shift, and go to state 41
    "int"       shift, and go to state 42
    "float"     shift, and go to state 43
    "str"       shift, and go to state 44
    "bool"      shift, and go to state 45

    ty       go to state 49
    type_id  go to state 47


state 23

   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   43       | ID "[" . rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 50
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 24

   21 exp: "(" exps . ")"

    ")"  shift, and go to state 51


state 25

   45 consts: "nil" .

    $default  reduce using rule 45 (consts)


state 26

   46 consts: NUMCONST .

    $default  reduce using rule 46 (consts)


state 27

   47 consts: STRCONST .

    $default  reduce using rule 47 (consts)


state 28

   48 consts: FLOATCONST .

    $default  reduce using rule 48 (consts)


state 29

   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   40     | "(" . rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 52
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 30

   28 rvalue: "-" . binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 53
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 31

   24 exp: "while" rvalue . "do" exp

    "do"  shift, and go to state 55


state 32

   26 rvalue: binops .

    $default  reduce using rule 26 (rvalue)


state 33

   29 binops: fexp . "=" binops
   30       | fexp . "<>" binops
   31       | fexp . ">" binops
   32       | fexp . "<" binops
   33       | fexp . "+" binops
   34       | fexp . "-" binops
   35       | fexp .  [$end, ID, ";", "(", ")", "]", "var", "type", "while", "do", "if", "then", "else", "break"]

    "+"   shift, and go to state 56
    "-"   shift, and go to state 57
    "="   shift, and go to state 58
    "<>"  shift, and go to state 59
    ">"   shift, and go to state 60
    "<"   shift, and go to state 61

    $default  reduce using rule 35 (binops)


state 34

   27 rvalue: texp .  [$end, ID, ";", "(", ")", "]", "var", "type", "while", "do", "if", "then", "else", "break"]
   36 fexp: texp . "*" fexp
   37     | texp . "/" fexp
   38     | texp . "*" texp
   39     | texp . "/" texp

    "*"  shift, and go to state 62
    "/"  shift, and go to state 63

    $default  reduce using rule 27 (rvalue)


state 35

   41 texp: lvalue .

    $default  reduce using rule 41 (texp)


state 36

   42 texp: consts .

    $default  reduce using rule 42 (texp)


state 37

   22 exp: "if" rvalue . "then" exp
   23    | "if" rvalue . "then" exp "else" exp

    "then"  shift, and go to state 64


state 38

   17 exps: . exp
   18     | . exp ";" exps
   18     | exp ";" . exps
   19     | .  [$end, ")"]
   20 exp: . lvalue ":=" rvalue
   21    | . "(" exps ")"
   22    | . "if" rvalue "then" exp
   23    | . "if" rvalue "then" exp "else" exp
   24    | . "while" rvalue "do" exp
   25    | . "break"
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID

    ID       shift, and go to state 11
    "("      shift, and go to state 12
    "while"  shift, and go to state 13
    "if"     shift, and go to state 14
    "break"  shift, and go to state 15

    $default  reduce using rule 19 (exps)

    exps    go to state 65
    exp     go to state 17
    lvalue  go to state 18


state 39

   20 exp: lvalue ":=" . rvalue
   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29
    "-"         shift, and go to state 30

    rvalue  go to state 66
    binops  go to state 32
    fexp    go to state 33
    texp    go to state 34
    lvalue  go to state 35
    consts  go to state 36


state 40

   12 ty: ID .

    $default  reduce using rule 12 (ty)


state 41

   11 ty: "array of" . type_id "[" NUMCONST "]"
   13 type_id: . "int"
   14        | . "str"
   15        | . "bool"
   16        | . "float"

    "int"    shift, and go to state 42
    "float"  shift, and go to state 43
    "str"    shift, and go to state 44
    "bool"   shift, and go to state 45

    type_id  go to state 67


state 42

   13 type_id: "int" .

    $default  reduce using rule 13 (type_id)


state 43

   16 type_id: "float" .

    $default  reduce using rule 16 (type_id)


state 44

   14 type_id: "str" .

    $default  reduce using rule 14 (type_id)


state 45

   15 type_id: "bool" .

    $default  reduce using rule 15 (type_id)


state 46

    7 vardec: "var" ID ":" ty .  [$end, ID, "(", "var", "type", "while", "if", "break"]
    8       | "var" ID ":" ty . ":=" rvalue

    ":="  shift, and go to state 68

    $default  reduce using rule 7 (vardec)


state 47

   10 ty: type_id .

    $default  reduce using rule 10 (ty)


state 48

    6 vardec: "var" ID ":=" rvalue .

    $default  reduce using rule 6 (vardec)


state 49

    9 tydec: "type" ID "=" ty .

    $default  reduce using rule 9 (tydec)


state 50

   43 lvalue: ID "[" rvalue . "]"

    "]"  shift, and go to state 69


state 51

   21 exp: "(" exps ")" .

    $default  reduce using rule 21 (exp)


state 52

   40 texp: "(" rvalue . ")"

    ")"  shift, and go to state 70


state 53

   28 rvalue: "-" binops .

    $default  reduce using rule 28 (rvalue)


state 54

   36 fexp: texp . "*" fexp
   37     | texp . "/" fexp
   38     | texp . "*" texp
   39     | texp . "/" texp

    "*"  shift, and go to state 62
    "/"  shift, and go to state 63


state 55

   20 exp: . lvalue ":=" rvalue
   21    | . "(" exps ")"
   22    | . "if" rvalue "then" exp
   23    | . "if" rvalue "then" exp "else" exp
   24    | . "while" rvalue "do" exp
   24    | "while" rvalue "do" . exp
   25    | . "break"
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID

    ID       shift, and go to state 11
    "("      shift, and go to state 12
    "while"  shift, and go to state 13
    "if"     shift, and go to state 14
    "break"  shift, and go to state 15

    exp     go to state 71
    lvalue  go to state 18


state 56

   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   33       | fexp "+" . binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 72
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 57

   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   34       | fexp "-" . binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 73
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 58

   29 binops: . fexp "=" binops
   29       | fexp "=" . binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 74
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 59

   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   30       | fexp "<>" . binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 75
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 60

   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   31       | fexp ">" . binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 76
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 61

   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   32       | fexp "<" . binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    binops  go to state 77
    fexp    go to state 33
    texp    go to state 54
    lvalue  go to state 35
    consts  go to state 36


state 62

   36 fexp: . texp "*" fexp
   36     | texp "*" . fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   38     | texp "*" . texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    fexp    go to state 78
    texp    go to state 79
    lvalue  go to state 35
    consts  go to state 36


state 63

   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   37     | texp "/" . fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   39     | texp "/" . texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST

    "nil"       shift, and go to state 25
    ID          shift, and go to state 11
    NUMCONST    shift, and go to state 26
    STRCONST    shift, and go to state 27
    FLOATCONST  shift, and go to state 28
    "("         shift, and go to state 29

    fexp    go to state 80
    texp    go to state 81
    lvalue  go to state 35
    consts  go to state 36


state 64

   20 exp: . lvalue ":=" rvalue
   21    | . "(" exps ")"
   22    | . "if" rvalue "then" exp
   22    | "if" rvalue "then" . exp
   23    | . "if" rvalue "then" exp "else" exp
   23    | "if" rvalue "then" . exp "else" exp
   24    | . "while" rvalue "do" exp
   25    | . "break"
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID

    ID       shift, and go to state 11
    "("      shift, and go to state 12
    "while"  shift, and go to state 13
    "if"     shift, and go to state 14
    "break"  shift, and go to state 15

    exp     go to state 82
    lvalue  go to state 18


state 65

   18 exps: exp ";" exps .

    $default  reduce using rule 18 (exps)


state 66

   20 exp: lvalue ":=" rvalue .

    $default  reduce using rule 20 (exp)


state 67

   11 ty: "array of" type_id . "[" NUMCONST "]"

    "["  shift, and go to state 83


state 68

    8 vardec: "var" ID ":" ty ":=" . rvalue
   26 rvalue: . binops
   27       | . texp
   28       | . "-" binops
   29 binops: . fexp "=" binops
   30       | . fexp "<>" binops
   31       | . fexp ">" binops
   32       | . fexp "<" binops
   33       | . fexp "+" binops
   34       | . fexp "-" binops
   35       | . fexp
   36 fexp: . texp "*" fexp
   37     | . texp "/" fexp
   38     | . texp "*" texp
   39     | . texp "/" texp
   40 texp: . "(" rvalue ")"
   41     | . lvalue
   42     | . consts
   43 lvalue: . ID "[" rvalue "]"
   44       | . ID
   45 consts: . "nil"
   46       | . NUMCONST
   47       | . STRCONST
   48       | . FLOATCONST
